# dramatiq-demo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
scripts/: basic.py  example.py  test.py
tasks/: main.py
