[tool.poetry]
name = "dramatiq-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
dramatiq = {extras = ["all"], version = "^1.15.0"}
httpx = "^0.25.0"
ipython = "^8.17.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"


[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 100

select = [
    "I",  # isort
    "C4", # flake8-comprehensions
    "F",  # pyflakes
    "E",  # pycodestyle
    "TID",  # flake8-tidy-imports
    "RUF", # ruff-internal
]
ignore = [
    "E501",  # line too long, handled by black
    "C401",  # generator syntax for sets vs always force set comprehension
    "PLC0414",  # allow explicit re-exports using 'as' without forcing all
    "C901", # mccabe
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
